--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-accent: #E07A5F;
+  --color-accent: #14B8A6;
   --font-header: "Playfair";
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
